--- a/src/static/styles/app.css
+++ b/src/static/styles/app.css
@@ -16,6 +16,10 @@
     background-color: #ffffff;
 }
 
+.header-content {
+    color: #ffffff;
+}
+
 .banner-wrapper {
     width: 100%;
     height: 5rem;
