--- a/src/static/styles/app.scss
+++ b/src/static/styles/app.scss
@@ -1,3 +1,5 @@
+@import "../../../node_modules/antd/dist/antd.css";
+
 .app {
   .header {
     width: 100%;
@@ -21,8 +23,16 @@
   .banner-wrapper {
     width: 100%;
     height: 5rem;
-    .slide-list {
+    .home-banner {
       width: 100%;
+      .slick-list {
+        img {
+          width: 100%;
+        }
+      }
+    }
+    .ant-card-body {
+      padding: 10px;
     }
   }
 
