--- a/src/static/styles/index.scss
+++ b/src/static/styles/index.scss
@@ -19,5 +19,14 @@ ul, li {
   list-style: none;
 }
 
+.float-right {
+  float: right;
+}
+
+.no-border {
+  border: none !important;
+  outline: none !important;
+}
+
 $theme: #ec493e;
 $gray: #eee;
