--- a/src/static/styles/home.scss
+++ b/src/static/styles/home.scss
@@ -8,7 +8,6 @@
   width: 100%;
   height: 10rem;
   z-index: 0;
-
   .ant-carousel {
     .slick-slide {
       text-align: center;
@@ -16,10 +15,21 @@
       line-height: 160px;
       background: #364d79;
       overflow: hidden;
+      img {
+        width: 100%;
+      }
     }
 
     h3 {
       color: #fff;
     }
   }
+}
+
+.ant-card-body {
+  padding: 10px;
+}
+
+.list-wrapper {
+  display: block;
 }
