--- a/src/static/styles/app.scss
+++ b/src/static/styles/app.scss
@@ -1,4 +1,10 @@
 @import "~antd/dist/antd.css";
+@import "index";
+@import "home";
+@import "films";
+@import "shows";
+@import "videos";
+@import "user";
 
 .app {
   .header {
